examples/invalid/error_sintactico_01.chs
nimais main ABRAZO RESPANDO ALMA
    cabal edad DAR 20

    simon ABRAZO edad BOCA 18 ALMA
        chotear ABRAZO "Sos mayor de edad" RESPANDO
    CUERPO chapus ALMA
        chotear ABRAZO "Sos menor de edad" RESPANDO
    CUERPO
CUERPO